More expand/collapse fixes. Starting search

--- a/themes/geekboot/assets/scss/_crds.scss
+++ b/themes/geekboot/assets/scss/_crds.scss
@@ -5,7 +5,58 @@
   width: 3px;
 }
 
+.crdSearch {
+  padding-top: 24px !important;
+  padding-bottom: 24px !important;
+  padding-right: 80px;
+
+
+  .search-box {
+    border-radius: 7px;
+border: 2px solid rgba(243,243,243, 1);
+border: 1px solid rgba(206,207,207, 1);
+opacity: 1;
+background-color: rgba(255,255,255, 1);
+
+    label {
+      width: 100%;
+      position: relative;
+
+    }
+
+    label:before {
+      content: "";
+      position: absolute;
+      margin-top: 7px;
+      margin-bottom: 7px;
+      margin-left: 11px;
+      background-repeat: no-repeat;
+      background-position: center;
+      height: 21px;
+      width: 14px;
+      fill: #{$fog-600};
+      background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M504.1 471l-134-134C399.1 301.5 415.1 256.8 415.1 208c0-114.9-93.13-208-208-208S-.0002 93.13-.0002 208S93.12 416 207.1 416c48.79 0 93.55-16.91 129-45.04l134 134C475.7 509.7 481.9 512 488 512s12.28-2.344 16.97-7.031C514.3 495.6 514.3 480.4 504.1 471zM48 208c0-88.22 71.78-160 160-160s160 71.78 160 160s-71.78 160-160 160S48 296.2 48 208z"/></svg>');
+    }
+
+    input {
+      padding-left: 34px;
+    }
+}
+}
+
 .crds {
+  padding-right: 80px;
+
+  & :target {
+    padding-top: 0 !important;
+    margin-top: 0 !important;
+  }
+
+  /* can't use :target because the parent node needs padding */
+  .anchor-target {
+    padding-top: 60px !important;
+  }
+
   .col {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -16,6 +67,8 @@
     text-align: right;
     padding-left: 0px !important;
     padding-right: 0px !important;
+    color: var(--content-link-color);
+    cursor: pointer;
   }
 
   .crd-header-row {
@@ -146,7 +199,7 @@
       left: 7px;
     }
 
-    transition: margin 0ms;
+    // transition: margin 0ms;
   }
 
   .dataType {
